boton central y botones derechos ajustados

--- a/index.html
+++ b/index.html
@@ -15,14 +15,19 @@
         <div id="izq" class="mitad">
             <img src="img/simon.png">
         </div>
+
+        <div id="centro" class="mitad">
+            <button id="go">EMPEZAR</button>
+        </div>
+
         <div id="der" class="mitad">
             <div id="superior">
-                <button id="amarillo"></button>
-                <button id="azul"></button>
+                <button id="verde"></button>
+                <button id="rojo"></button>
             </div>
             <div id="inferior">
-                <button id="rojo"></button>
-                <button id="verde"></button>
+                <button id="amarillo"></button>
+                <button id="azul"></button>
             </div>
         </div>
     </div>
