--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div id="centro" class="mitad">
-            <button id="go">EMPEZAR</button>
+            <button id="go" onclick="empezar()">EMPEZAR</button>
         </div>
 
         <div id="der" class="mitad">
@@ -31,5 +31,7 @@
             </div>
         </div>
     </div>
+
+    <div id="puntuacion">Puntos: 0</div>
 </body>
 </html>
