me voy a volar la cabeza

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div id="pagina">
         <div id="izq" class="mitad">
-            <img src="img/simon.png">
+            <img id="imagen" src="img/simon.png">
         </div>
 
         <div id="centro" class="mitad">
