a la mierda el titulo y CPU terminada

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Simón dice</title>
     <link rel="stylesheet" href="simon.css">
     <script src="simon.js"></script>
-    <script src="titulo.js"></script>
 </head>
 <body>
     <h1 id="titulo">SIMÓN DICE</h1>
@@ -17,7 +16,7 @@
         </div>
 
         <div id="centro" class="mitad">
-            <button id="go" onclick="empezar()">EMPEZAR</button>
+            <button id="go" onclick="main()">EMPEZAR</button>
         </div>
 
         <div id="der" class="mitad">
