no entiendo nada

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         </div>
 
         <div id="centro" class="mitad">
-            <button id="go" onclick="main()">EMPEZAR</button>
+            <button id="go" onclick="turnoCPU()">EMPEZAR</button>
         </div>
 
         <div id="der" class="mitad">
             <div id="superior">
-                <button id="verde"></button>
-                <button id="rojo"></button>
+                <button class="colores" id="verde" onclick="pulsarVerde()"></button>
+                <button class="colores" id="rojo" onclick="pulsarRojo()"></button>
             </div>
             <div id="inferior">
-                <button id="amarillo"></button>
-                <button id="azul"></button>
+                <button class="colores" id="amarillo" onclick="pulsarAmarillo()"></button>
+                <button class="colores" id="azul" onclick="pulsarAzul()"></button>
             </div>
         </div>
     </div>
